# robo_diferenciado

./: CMakeLists.txt  README.md  package.xml
action/: FollowPath.action
config/: astar_planner.yaml  diff_drive_control.yaml  gz_bridge.yaml  ros2_control.yaml  ros_gz_example_bridge.yaml
hooks/: robo_diferenciado.dsv.in  robo_diferenciado.sh.in
include/robo_diferenciado/: AStar.hpp
launch/: diff_drive.launch.py
map/: test  test.cpp
rviz/: diff_drive.rviz
src/: AStar.cpp  astar.cpp  astar_planner.cpp  example_cmd_publisher.cpp  map_reader.cpp  map_viewer.cpp  map_viewer_astar.cpp  odom.cpp  path_follower.cpp  trajectory_generator.cpp
urdf/: dif_base.urdf.xacro  diferenciado_robot_model.urdf.xacro  wheels.ros2_control.xacro
worlds/: diff_drive.sdf
worlds/turtlebot3_world/: model.config  model.sdf
